# gtock

./: README.md  install.sh  meson.build  uninstall.sh
gtock-src/usr/share/applications/: gtock.desktop
gtock-src/usr/share/gtock/: at.py  atEditor.py  config.py  crontab.py  crontabEditor.py  data.py  gtock-export.py  gtock-import.py  gtock.py  lang.py  mainWindow.py  setCmdWindow.py  template.py  template_manager.py  xwrapper.py
gtock-src/usr/share/gtock/assets/: gtock-gtk3.glade  gtock-gtk4.glade  org.gtk.gtock.gschema.xml
gtock-src/usr/share/gtock/legacy/: scheduleapplet.py
usr/share/applications/: gnome-schedule.desktop
usr/share/gnome-schedule/: addWindow.py  at.py  atEditor.py  config.py  crontab.py  crontabEditor.py  crontabEditorHelper.py  data.py  db.py  gnome-schedule.py  mainWindow.py  setuserWindow.py  template.py  template_chooser.py  xwrapper.py
usr/share/gnome-schedule/assets/: gnome-schedule-applet.xml  gnome-schedule-gtk3.glade  gnome-schedule-gtk4.glade  org.gnome.gnome-schedule.gschema.xml
usr/share/gnome-schedule/legacy/: gnome-schedule-export.py  gnome-schedule-import.py
